hacky image addition

--- a/src/client/sass/components/_quote.scss
+++ b/src/client/sass/components/_quote.scss
@@ -3,9 +3,10 @@
 .quote-container {
 
   .quote-image-container {
-    
+    max-width: 40%;
+    margin: 0 auto;
   }
-  
+
   .quote-copy {
     &:before {
       content : "\"";
