--- a/src/client/sass/generic/_headings.scss
+++ b/src/client/sass/generic/_headings.scss
@@ -13,6 +13,7 @@
   margin: 1em 0;
   padding: $padding 0 $padding (2 * $offset);
 
+  font-family: $font-heading;
   font-size: $font-size;
   font-weight: bold;
   text-transform: uppercase;
