--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -8,7 +8,7 @@ html(lang='en')
   body
     header
     div.page-container
-      h2.heading [ TEST ] April Quotes
+      //- h2.heading April Ludgate
       div.inner-content
         div.quote-container
           div.quote-image-container
